--- a/assets about page/about.html
+++ b/assets about page/about.html
@@ -218,8 +218,8 @@
             <h1 id="Team-Heading">MEET THE TEAM</h1>
             </div>
           <div class="flex flex-wrap -m-4">
-            <div class="p-4 lg:w-1/4 md:w-1/2">
-              <div id="avir" id="team_member" class="h-full flex flex-col items-center text-center">
+            <div id="team_member" class="p-4 lg:w-1/4 md:w-1/2">
+              <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="./Core Council/Avir Tripathi - Prez.jfif">
                 <div class="w-full">
                   <h2 class="title-font font-medium text-lg text-white">Avir Tripathi</h2>
